--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
         hibernate:
             ddl-auto: update
         database: mysql
+        show-sql: true
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     servlet:
         multipart:
