--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,9 +2,9 @@ spring:
     #数据源配置
     datasource:
         druid:
-            url: jdbc:mysql://127.0.0.1/base?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+            url: jdbc:mysql://106.12.55.131/mybase?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
             username: root
-            password: 123456
+            password: root
             driver-class-name: com.mysql.cj.jdbc.Driver
             initial-size: 10
             max-active: 40
@@ -19,5 +19,6 @@ spring:
             time-between-eviction-runs-millis: 60000
             min-evictable-idle-time-millis: 300000
             connection-init-sqls: ["SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci"]
+
 
 
