--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,4 +20,14 @@ spring:
         date-format: yyyy-MM-dd HH:mm:ss
         time-zone: GMT+8
 
-
+    #redis连接配置
+    redis:
+        database: 8
+        host: 106.12.55.131
+        port: 6379
+        password: 398023
+        app: base
+    data:
+        redis:
+          repositories:
+            enabled: false
