--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
         database: 8
         host: 106.12.55.131
         port: 6379
-        password: 398023
+        password:
         app: base
     data:
         redis:
